# whisperx-api-server

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.worker-cpu  Dockerfile.worker-cuda  README.md  compose-kafka.yaml  compose.yaml  constraints.txt  cuda-docker-entrypoint.sh  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements.txt
.github/workflows/: ci.yml  deploy-images.yml  docker-build-and-push-cpu.yml  docker-build-and-push-cuda.yml  docker-build-and-push.yml
mcp-whisperx/: pyproject.toml
mcp-whisperx/src/whisperx_mcp_server/: main.py
monitoring/prometheus/: prometheus-cpu.yml  prometheus-cuda.yml  prometheus-kafka-cpu.yml  prometheus-kafka-cuda.yml
src/whisperx_api_server/: .gitignore  config.py  dependencies.py  executors.py  formatters.py  kafka_client.py  logger.py  logging_config.json  main.py  models.py  request_status.py  result_store.py  s3_client.py  transcriber.py  url_fetch.py  webhook.py  webui.py
src/whisperx_api_server/api-keys/: keys.json
src/whisperx_worker/: handler.py  health_server.py  main.py  processor.py  progress.py
tests/: conftest.py  fake_backends.py  test_async_endpoint.py  test_auth.py  test_config.py  test_filenames.py  test_formatters.py  test_info_endpoint.py  test_kafka_decode.py  test_kafka_integration.py  test_kafka_janitor.py  test_kafka_reply.py  test_middleware.py  test_models_catalog.py  test_request_status.py  test_result_store.py  test_s3_lease.py  test_smoke.py  test_status_endpoint.py  test_transcription_params.py  test_transcriptions_endpoint.py  test_webhook.py  test_webui.py  test_worker_e2e.py  test_worker_handler.py
webui/: README.md  biome.json  index.html  package.json  tsconfig.json  vite.config.ts
webui/src/: App.tsx  index.css  main.tsx
webui/src/api/: client.ts  (+1 more)
(+52 files in other folders)
